--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "dependencies": {
     "@ddu6/stc": "^0.1.2",
-    "@ddu6/stui": "^0.0.24",
-    "st-std": "^0.0.29"
+    "@ddu6/stui": "^0.0.25",
+    "st-std": "^0.0.30"
+  },
+  "engines": {
+    "node": "^14.0.0",
+    "npm": "^7.0.0"
   }
 }
