--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "version": "0.0.29",
   "scripts": {
-    "pkg": "node scripts/pkg-css.js",
-    "build": "npm run pkg && webpack"
+    "build": "pkg && webpack"
   },
   "devDependencies": {
+    "@ddu6/pkg-tools": "^0.0.2",
     "@types/node": "^16.4.3",
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@ddu6/stc": "^0.1.3",
-    "@ddu6/stui": "^0.0.35",
-    "st-std": "^0.0.34"
+    "@ddu6/stui": "^0.0.38",
+    "st-std": "^0.0.35"
   },
   "engines": {
     "node": "^14.0.0",
