--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "build": "pkg && webpack"
   },
   "devDependencies": {
-    "@ddu6/pkg-tools": "^0.0.5",
+    "@ddu6/pkg-tools": "^0.0.6",
     "@types/node": "^16.10.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
-    "webpack": "^5.57.1",
-    "webpack-cli": "^4.8.0"
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
   },
   "dependencies": {
-    "@ddu6/stc": "^0.2.6",
-    "@ddu6/stui": "^0.0.49",
-    "st-std": "^0.2.10"
+    "@ddu6/stc": "^0.2.7",
+    "@ddu6/stui": "^0.0.51",
+    "st-std": "^0.2.11"
   },
   "engines": {
-    "node": "^14.0.0",
-    "npm": "^7.0.0"
+    "node": ">=14.0.0",
+    "npm": ">=8.0.0"
   }
 }
