--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "module": "ES2020",
         "target": "ES2020",
         "strict": true,
-        "moduleResolution": "Node"
+        "moduleResolution": "Node",
+        "declaration": true,
     },
     "include": [
         "src/**/*"
