--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "@ddu6/stc": "^0.6.0",
+    "@ddu6/stc": "^0.6.1",
     "@ddu6/stui": "^0.2.1",
-    "st-std": "^0.5.0"
+    "st-std": "^0.5.2",
+    "stdn": "^0.3.0"
   },
   "engines": {
     "node": ">=14.0.0",
