--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "@ddu6/stc": "^0.17.0",
     "@ddu6/stui": "^0.8.1",
-    "st-std": "^0.19.3",
-    "stdn": "^0.3.1"
+    "st-std": "^0.19.3"
   },
   "engines": {
     "node": ">=14.0.0",
