--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "STDN Viewer",
   "main": "dist/mod.js",
   "scripts": {
-    "build": "pkg && tsc && webpack"
+    "build": "tsc && webpack"
   },
   "repository": {
     "type": "git",
@@ -12,18 +12,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@ddu6/pkg-tools": "^0.0.12",
+    "@ddu6/stc": "^0.19.1",
+    "@ddu6/stui": "^0.11.0",
+    "st-std": "^0.23.1",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   },
-  "dependencies": {
-    "@ddu6/stc": "^0.19.1",
-    "@ddu6/stui": "^0.9.1",
-    "st-std": "^0.20.4"
-  },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=8.0.0"
+  },
+  "dependencies": {
+    "@ddu6/importer": "^0.0.2"
   }
 }
